Clean footer.css and fix gaps between social media icons

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -44,18 +44,10 @@ footer p {
     margin-right: 10px;
 }
 
-.contact__cards {
-    display: flex;
-}
-
-
-/*Esto es innecesario
 #links__socialmedia {
     display: flex;
-    column-gap: 10px;
-    justify-content: center;
+    column-gap: 5px;
 }
-*/
 
 #links__socialmedia i {
     height: 35px;
